# fmipp

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  Doxyfile  Doxyfile.in  FMIPP_LICENSE  Makefile  README.md  makefile.cygwin  makefile.darwin  makefile.linux  makefile.mingw
co-sim/: CMakeLists.txt  makefile.mingw
co-sim/examples/trnsys17/: TRNSYS.h  Type6139.cpp  makefile.mingw
co-sim/fmi_cs_1.0/: fmiModelFunctions.h  fmiPlatformTypes.h
co-sim/functions/: fmiFunctions.cpp  fmiFunctions.h
co-sim/include/: FMIComponentBackEnd.h  FMIComponentFrontEnd.h  FMIPPConfig.h  HelperFunctions.h  IPCMaster.h  IPCSlave.h  SHMManager.h  SHMMaster.h  SHMSlave.h  ScalarVariable.h
co-sim/src/: FMIComponentBackEnd.cpp  FMIComponentFrontEnd.cpp  HelperFunctions.cpp  SHMManager.cpp  SHMMaster.cpp  SHMSlave.cpp  ScalarVariable.cpp
cython/: test.py  (+3 more)
export/: CMakeLists.txt
export/examples/powerfactory/: CMakeLists.txt  PowerFactoryFrontEnd.cpp  PowerFactoryFrontEnd.h  PowerFactoryRealScalar.h  PowerFactoryTimeAdvance.cpp
export/examples/trnsys17/: CMakeLists.txt  makefile.mingw
export/functions/: fmiFunctions.cpp  fmiFunctions.h
export/functions/fmi_v1.0/: fmiFunctions.cpp
export/functions/fmi_v2.0/: fmi2Functions.cpp  fmi2Functions.h
export/include/: BackEndApplicationBase.h  BackEndImplementationBase.h  FMIComponentBackEnd.h  FMIComponentFrontEnd.h  FMIComponentFrontEndBase.h  HelperFunctions.h  IPCLogger.h  IPCMaster.h  IPCMasterLogger.h  IPCSlave.h  IPCSlaveLogger.h  IPCString.h  SHMManager.h  SHMMaster.h  SHMSlave.h  ScalarVariable.h
export/src/: BackEndApplicationBase.cpp  BackEndImplementationBase.cpp  FMIComponentBackEnd.cpp  FMIComponentFrontEnd.cpp  FMIComponentFrontEndBase.cpp  HelperFunctions.cpp  IPCLogger.cpp  IPCMasterLogger.cpp  IPCSlaveLogger.cpp  SHMManager.cpp  SHMMaster.cpp  SHMSlave.cpp  ScalarVariable.cpp
export/swig/: CMakeLists.txt  libfmippex.i
export/tools/powerfactory/: CMakeLists.txt  PowerFactoryExtraOutput.cpp  PowerFactoryExtraOutput.h  PowerFactoryFrontEnd.cpp  PowerFactoryFrontEnd.h  PowerFactoryRealScalar.cpp  PowerFactoryRealScalar.h  PowerFactoryTimeAdvance.cpp  PowerFactoryTimeAdvance.h
export/tools/trnsys17/: CMakeLists.txt
import/: CMakeLists.txt
import/base/include/: BareFMU.h  CallbackFunctions.h  DynamicalSystem.h  FMUBase.h  FMUCoSimulation.h  FMUCoSimulationBase.h  FMUCoSimulation_v1.h  FMUCoSimulation_v2.h  FMUModelExchange.h  FMUModelExchangeBase.h  FMUModelExchange_v1.h  FMUModelExchange_v2.h  LogBuffer.h  ModelDescription.h  ModelManager.h  NumericalJacobianCoefficients.icc  PathFromUrl.h
import/base/src/: BareFMU.cpp  CallbackFunctions.cpp  DynamicalSystem.cpp  FMUCoSimulation.cpp  FMUCoSimulation_v1.cpp  FMUCoSimulation_v2.cpp  FMUModelExchange.cpp  FMUModelExchange_v1.cpp  FMUModelExchange_v2.cpp  LogBuffer.cpp  ModelDescription.cpp  ModelManager.cpp  PathFromUrl.cpp
import/cython/: CMakeLists.txt  README  cythonize.py  fmipp.pyx  fmippim.pyx  test.py
import/integrators/include/: Integrator.h  IntegratorStepper.h  IntegratorType.h
import/integrators/src/: Integrator.cpp  IntegratorStepper.cpp
import/swig/: CMakeLists.txt  libfmippim.i
import/utility/include/: FixedStepSizeFMU.h  History.h  IncrementalFMU.h  InterpolatingFixedStepSizeFMU.h  RollbackFMU.h  VariableStepSizeFMU.h
import/utility/src/: FixedStepSizeFMU.cpp  History.cpp  IncrementalFMU.cpp  InterpolatingFixedStepSizeFMU.cpp  RollbackFMU.cpp  VariableStepSizeFMU.cpp
swig/: CMakeLists.txt  IncrementalFMU.i  IncrementalFMU.java  IncrementalFMU_wrap.cxx  SWIGTYPE_p_double.java  SWIGTYPE_p_std__string.java  helper.java  helperJNI.java  libfmipp.i
test/: CMakeAddTests.txt  CMakeLists.txt  CMakePackFMU.txt  makefile.darwin  makefile.linux  testFMI2ExportUtilities.cpp  testFMIExportUtilities.cpp  testFMU.cpp  testFMU2Integrator.cpp  testFMU2ModelExchange.cpp  testFMU2SDKImport.cpp  testFMUCoSimulation.java  testFMUCoSimulation.py  testFMUIntegrator.cpp  testFMUModelExchange.cpp  testFMUModelExchange.java  testFMUModelExchange.py  testFixedStepSizeFMU.cpp  testFixedStepSizeFMU.py  testIncrementalFMU.cpp  testIncrementalFMU.java  testIncrementalFMU.py  testInterpolatingFixedStepSizeFMU.cpp  testInterpolatingFixedStepSizeFMU.py  testModelDescription.cpp  testModelManager.cpp  testRollbackFMU.cpp  testRollbackFMU.py  testVariableStepSizeFMU.cpp  testVariableStepSizeFMU.py
test/dxiskx_fmu/: CMakeLists.txt  dxiskx.c  modelDescription.xml
test/fmusdk_examples/: CMakeLists.txt
test/fmusdk_examples/bouncingBall_fmu/: CMakeLists.txt  bouncingBall.c  modelDescription.xml
test/fmusdk_examples/dq_fmu/: CMakeLists.txt  dq.c  modelDescription.xml
test/fmusdk_examples/inc_fmu/: CMakeLists.txt  inc.c  modelDescription.xml
test/fmusdk_examples/shared/: fmuTemplate.c
test/fmusdk_examples/values_fmu/: CMakeLists.txt  modelDescription.xml  values.c
test/fmusdk_examples/vanDerPol_fmu/: CMakeLists.txt  modelDescription.xml  vanDerPol.c
test/numeric/: CMakeLists.txt
test/numeric/asymptotic_sine_fmu/: CMakeLists.txt  asymptotic_sine.c  modelDescription.xml
test/numeric/linear_stiff_fmu/: CMakeLists.txt  linear_stiff.c  modelDescription.xml
test/numeric/polynomial_fmu/: .#polynomial.c  CMakeLists.txt  modelDescription.xml  polynomial.c
test/polynomial_fmu/: CMakeLists.txt  polynomial.c
test/sine_standalone2_fmu/: CMakeLists.txt  modelDescription.xml  sine_standalone_exe.cpp
test/sine_standalone_fmu/: CMakeLists.txt  dummy_input_file.txt  modelDescription.xml  sine_standalone_exe.cpp
test/step_t0_fmu/: CMakeLists.txt  makefile.darwin  makefile.linux  modelDescription.xml  step_t0.c
test/stiff_fmu/: CMakeLists.txt  modelDescription.xml  stiff.c
test/v2_0_fmu/: CMakeLists.txt  modelDescription.xml  v2_0.c
test/zerocrossing_fmu/: CMakeLists.txt  modelDescription.xml  zerocrossing.c
test/zigzag2_fmu/: CMakeLists.txt  fmi2ModelFunctions.h  fmi2ModelTypes.h  modelDescription.xml  modelDescription_me_only.xml  zigzag2.c
test/zigzag_fmu/: CMakeLists.txt  givezero.c  givezero.h  makefile.darwin  makefile.linux  modelDescription.xml  zigzag.c
(+276 files in other folders)
